@@ -1,3 +1,7 @@
+2008-02-20  Akira TAGOH  <tagoh@redhat.com>
+
+	* data/xinputinfo.sh.in: Fix to output quoted strings properly.
+
 2008-02-19  Akira TAGOH  <tagoh@redhat.com>
 
 	* data/xinput.sh.in.in: Add a hack to ensure starting the user specific
